fix a bug just occur on mobile device after 3drotate

--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,12 @@ html *{margin:0;padding:0;font-size:1em;}
 
 body{width:100%;height:100%;}
 .contentcon{width:100%;height:100%;position:absolute;top:30px;-webkit-perspective:1000px;perspective:1000px;}
-.contentcon .routecon{width:100%;height:100%;overflow:hidden;}
+.contentcon .routecon{width:100%;height:100%;}
 /*.revert{-webkit-transform:rotateY(180deg)}*/
 .item{position:absolute;width:100%;height:100%;top:0px;left:0px;}
-.currentpage{z-index:999;}
+.currentpage{z-index:9;display:block;}
 .revert .currentpage{-webkit-transform:rotateY(-180deg)}
-.otherpage{z-index:1;top:100%;}
+.otherpage{z-index:1;top:100%;display:none;}
 .infotable{width:100%;color:#fff;}
 
 .navbtncon{width:100%;position:fixed;top:0px;z-index:9999;background-color:#fff;list-style:none;}
@@ -32,14 +32,16 @@ body{width:100%;height:100%;}
 }
 
 .up-nextpage{
-	z-index:1000;
+	display:block !important;
+	z-index:10;
 	-webkit-animation: MenuAnimOut2 .5s linear forwards;
 	-moz-animation: MenuAnimOut2 .5s linear forwards;
 	animation: MenuAnimOut2 .5s linear forwards;
 }
 
 .down-nextpage{
-	z-index:1000;
+	display:block !important;
+	z-index:10;
 	-webkit-animation: MenuAnimOut4 .5s linear forwards;
 	-moz-animation: MenuAnimOut4 .5s linear forwards;
 	animation: MenuAnimOut4 .5s linear forwards;
